--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisdomstar94/react-global-variable-manager",
-  "version": "0.0.3-test.1",
+  "version": "0.0.3",
   "license": "MIT",
   "private": false,
   "scripts": {
